--- a/homework/lesson-05/homework.ipynb
+++ b/homework/lesson-05/homework.ipynb
@@ -241,11 +241,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Answer: 130 mb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer: 0.756743795240796 = 0.757"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "End\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('End')"
+   ]
   }
  ],
  "metadata": {
