--- a/homework/lesson-08/homework.ipynb
+++ b/homework/lesson-08/homework.ipynb
@@ -1791,6 +1791,13 @@
    "source": [
     "np.mean(history.history['val_accuracy'][5:]).round(2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer: 0.71"
+   ]
   }
  ],
  "metadata": {
